feat(components): add initial set (button, grid, input, loader, navbar, panel) (#8)

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,4 +1,5 @@
 {
   "App.nav.home": "Startseite",
-  "App.nav.counter": "Zähler"
+  "App.nav.counter": "Zähler",
+  "App.nav.components": "Komponenten"
 }
