--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,4 +1,5 @@
 {
   "App.nav.home": "Home",
-  "App.nav.counter": "Counter"
+  "App.nav.counter": "Counter",
+  "App.nav.components": "Components"
 }
