feat(components): add collapse, add modal, refine navbar (#11)

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,5 +1,7 @@
 {
   "App.nav.home": "Startseite",
   "App.nav.counter": "Zähler",
-  "App.nav.components": "Komponenten"
+  "App.nav.components": "Komponenten",
+  "App.nav.english": "Englisch",
+  "App.nav.german": "Deutsch"
 }
