feat(i18n): add brazilian portuguese translations (#26)

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -3,5 +3,6 @@
   "App.nav.counter": "Zähler",
   "App.nav.components": "Komponenten",
   "App.nav.english": "Englisch",
-  "App.nav.german": "Deutsch"
+  "App.nav.german": "Deutsch",
+  "App.nav.pt-BR": "Portugiesisch"
 }
