--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,5 +3,6 @@
   "App.nav.counter": "Counter",
   "App.nav.components": "Components",
   "App.nav.english": "English",
-  "App.nav.german": "German"
+  "App.nav.german": "German",
+  "App.nav.pt-BR": "Portuguese"
 }
