feat(i18n): add possibility to add default messages with magic comments
related to #27

--- a/i18n/de-DE.json
+++ b/i18n/de-DE.json
@@ -1,4 +1,5 @@
 {
+  "App.core.description": "Ein professionelles Boilerplate für universelle, progressive-web-apps",
   "App.nav.components": "Komponenten",
   "App.nav.counter": "Zähler",
   "App.nav.english": "Englisch",
