chore: update docs

--- a/docs/I18N.md
+++ b/docs/I18N.md
@@ -1,7 +1,14 @@
-# i18n (WIP)
+# i18n
 
+The i18n set up is based on [vue-i18n](https://kazupon.github.io/vue-i18n/en/).
 
-### extract messages
+## important files
+
+- `src/app/shared/plugins/i18n.ts`, i18n set up with default language and asynchronous language switch
+- `package.json`, define supported languages for your application (used by scripts and application)
+- `i18n/*.json`, language files
+
+## extract messages
 
 To extract all your i18n IDs run `npm run extract-i18n-messages`.
 This will generate the languages JSON files in the folder `./i18n`
