--- a/i18n/en-EN.json
+++ b/i18n/en-EN.json
@@ -5,5 +5,12 @@
   "App.nav.english": "English",
   "App.nav.german": "German",
   "App.nav.home": "Home",
-  "App.nav.pt-BR": "Portuguese"
+  "App.nav.pt-BR": "Portuguese",
+  "components.calendar.friday.short": "F",
+  "components.calendar.monday.short": "M",
+  "components.calendar.saturday.short": "S",
+  "components.calendar.sunday.short": "S",
+  "components.calendar.thursday.short": "T",
+  "components.calendar.tuesday.short": "T",
+  "components.calendar.wednesday.short": "W"
 }
