--- a/i18n/pt-BR.json
+++ b/i18n/pt-BR.json
@@ -5,5 +5,12 @@
   "App.nav.english": "Inglês",
   "App.nav.german": "Alemão",
   "App.nav.home": "Início",
-  "App.nav.pt-BR": "Português"
+  "App.nav.pt-BR": "Português",
+  "components.calendar.friday.short": "F",
+  "components.calendar.monday.short": "M",
+  "components.calendar.saturday.short": "S",
+  "components.calendar.sunday.short": "S",
+  "components.calendar.thursday.short": "T",
+  "components.calendar.tuesday.short": "T",
+  "components.calendar.wednesday.short": "W"
 }
