--- a/i18n/pt-BR.json
+++ b/i18n/pt-BR.json
@@ -12,5 +12,20 @@
   "components.calendar.sunday.short": "S",
   "components.calendar.thursday.short": "T",
   "components.calendar.tuesday.short": "T",
-  "components.calendar.wednesday.short": "W"
+  "components.calendar.wednesday.short": "W",
+  "components.forms": "Forms",
+  "components.register.cancellationText": "Cancel",
+  "components.register.consent": "I consent to get contacted",
+  "components.register.email": "Email",
+  "components.register.email.invalidText": "This is not a valid email address!",
+  "components.register.name": "Name",
+  "components.register.name.invalidText": "Please provide first and last name",
+  "components.register.phone": "Phone",
+  "components.register.phone.invalidText": "This is not a valid phone number!",
+  "components.register.submit.notification.text": "We've sent an email to: {email}!",
+  "components.register.submit.notification.title": "Hey\n            {name}!",
+  "components.register.submitText": "Submit",
+  "components.register.subtitle": "Please fill in all required fields",
+  "components.register.terms": "I accept the <a href='/terms'>Terms and Conditions</a>",
+  "components.register.title": "Register"
 }
