--- a/i18n/pt-BR.json
+++ b/i18n/pt-BR.json
@@ -14,6 +14,7 @@
   "components.calendar.tuesday.short": "T",
   "components.calendar.wednesday.short": "W",
   "components.forms": "Forms",
+  "components.markdown": "\n # Markdown support\n\n - build on top of marked\n\n - server side rendering!!!\n\n - `github style` markdown\n",
   "components.register.cancellationText": "Cancel",
   "components.register.consent": "I consent to get contacted",
   "components.register.email": "Email",
@@ -23,7 +24,7 @@
   "components.register.phone": "Phone",
   "components.register.phone.invalidText": "This is not a valid phone number!",
   "components.register.submit.notification.text": "We've sent an email to: {email}!",
-  "components.register.submit.notification.title": "Hey\n            {name}!",
+  "components.register.submit.notification.title": "Hey {name}!",
   "components.register.submitText": "Submit",
   "components.register.subtitle": "Please fill in all required fields",
   "components.register.terms": "I accept the <a href='/terms'>Terms and Conditions</a>",
