--- a/i18n/de-DE.json
+++ b/i18n/de-DE.json
@@ -14,6 +14,7 @@
   "components.calendar.tuesday.short": "D",
   "components.calendar.wednesday.short": "M",
   "components.forms": "Formulare",
+  "components.markdown": "\n # Markdown support\n\n - build on top of marked\n\n - server side rendering!!!\n\n - `github style` markdown\n",
   "components.register.cancellationText": "Abbrechen",
   "components.register.consent": "Ja, Sie können mich kontaktieren",
   "components.register.email": "E-mail",
