chore: update docs (#96)

--- a/docs/I18N.md
+++ b/docs/I18N.md
@@ -1,4 +1,5 @@
 # i18n
+> For a detailed description read the following [Blogpost](http://blog.devcross.net/2018/02/25/effectively-work-with-i18n-in-vue-js/).
 
 The i18n set up is based on [vue-i18n](https://kazupon.github.io/vue-i18n/en/).
 
