feat(components): add vue-autocomplete (#97)
closes #58

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -6,6 +6,7 @@
   "App.nav.german": "German",
   "App.nav.home": "Home",
   "App.nav.pt-BR": "Portuguese",
+  "components.autocomplete.emptyMessage": "No options found for %s",
   "components.calendar.friday.short": "F",
   "components.calendar.monday.short": "M",
   "components.calendar.saturday.short": "S",
