--- a/i18n/de-DE.json
+++ b/i18n/de-DE.json
@@ -6,6 +6,7 @@
   "App.nav.german": "Deutsch",
   "App.nav.home": "Startseite",
   "App.nav.pt-BR": "Portugiesisch",
+  "components.autocomplete.emptyMessage": "Keine Einträge für %s gefunden.",
   "components.calendar.friday.short": "F",
   "components.calendar.monday.short": "M",
   "components.calendar.saturday.short": "S",
