--- a/docs/I18N.md
+++ b/docs/I18N.md
@@ -5,8 +5,10 @@ The i18n set up is based on [vue-i18n](https://kazupon.github.io/vue-i18n/en/).
 
 ## important files
 
-- `src/app/shared/plugins/i18n.ts`, i18n set up with default language and asynchronous language switch
-- `package.json`, define supported languages for your application (used by scripts and application)
+- `src/app/shared/plugins/i18n.ts`, i18n set up with asynchronous language switch
+- `src/server/isomorphic.ts`, set default language and default messages
+- `src/client/index.ts`, read default messages from store and use it in i18n
+- `package.json`, define supported locales for your application (used by scripts and application)
 - `i18n/*.json`, language files
 
 ## extract messages
@@ -14,10 +16,10 @@ The i18n set up is based on [vue-i18n](https://kazupon.github.io/vue-i18n/en/).
 To extract all your i18n IDs run `npm run extract-i18n-messages`.
 This will generate the languages JSON files in the folder `./i18n`
 
-To add new language files add a new entry to the `package.json -> config."supported-languages"` attribute.
+To add new language files add a new entry to the `package.json -> config."supported-locales"` attribute.
 
 This script also enables you to define default messages with a magic comment:
 
-`$t('App.nav.components' /*Components*/)`,
+`$t('App.nav.components' /* Components */)`,
 this will add `'Components'` as default value to all `'App.nav.components'` keys,
 but will keep previously added values.
