chore: update docs (#121)
closes #116, closes #113, closes #35

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,7 +1,8 @@
 {
-  "App.core.description": "an enterprise ready boilerplate for isomorphic, progressive web apps with Vue.JS",
+  "App.core.description": "A flexible, scalable, opinionated boilerplate for production-ready PWAs with focus on performance, development speed, and best practices",
   "App.nav.components": "Components",
   "App.nav.counter": "Counter",
+  "App.nav.docs": "Documentation",
   "App.nav.english": "English",
   "App.nav.german": "German",
   "App.nav.home": "Home",
