--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -2,6 +2,7 @@
   "App.core.description": "an enterprise ready boilerplate for isomorphic, progressive web apps with Vue.JS",
   "App.nav.components": "Componentes",
   "App.nav.counter": "Contador",
+  "App.nav.docs": "Documentation",
   "App.nav.english": "Inglês",
   "App.nav.german": "Alemão",
   "App.nav.home": "Início",
