--- a/docs/guide/i18n.md
+++ b/docs/guide/i18n.md
@@ -1,20 +1,20 @@
-# i18n
+# I18n
 > For a detailed description read the following [Blogpost](http://blog.devcross.net/2018/02/25/effectively-work-with-i18n-in-vue-js/).
 
-The i18n set up is based on [vue-i18n](https://kazupon.github.io/vue-i18n/en/).
+The i18n setup is based on [vue-i18n](https://kazupon.github.io/vue-i18n/en/).
 
-## important files
+## Important files
 
-- `src/app/shared/plugins/i18n.ts`, i18n set up with asynchronous language switch
-- `src/server/isomorphic.ts`, set default language and default messages
+- `src/app/shared/plugins/i18n.ts`, i18n set up with asynchronous locale switch
+- `src/server/isomorphic.ts`, set default locale and default messages
 - `src/client/index.ts`, read default messages from store and use it in i18n
 - `package.json`, define supported locales for your application (used by scripts and application)
 - `i18n/*.json`, language files
 
-## extract messages
+## Extract messages
 
 To extract all your i18n IDs run `npm run extract-i18n-messages`.
-This will generate the languages JSON files in the folder `./i18n`
+This will generate the language JSON files in the folder `./i18n`
 
 To add new language files add a new entry to the `package.json -> config."supported-locales"` attribute.
 
@@ -22,4 +22,4 @@ This script also enables you to define default messages with a magic comment:
 
 `$t('App.nav.components' /* Components */)`,
 this will add `'Components'` as default value to all `'App.nav.components'` keys,
-but will keep previously added values.
+but will keep previously modified values.
