--- a/i18n/de.json
+++ b/i18n/de.json
@@ -2,6 +2,7 @@
   "App.core.description": "Ein professionelles Boilerplate für universelle, progressive-web-apps mit Vue.JS",
   "App.nav.components": "Komponenten",
   "App.nav.counter": "Zähler",
+  "App.nav.docs": "Dokumentation",
   "App.nav.english": "Englisch",
   "App.nav.german": "Deutsch",
   "App.nav.home": "Startseite",
