feat(components): add example for form validation (#126)
closes #81

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -15,8 +15,10 @@
   "components.calendar.thursday.short": "D",
   "components.calendar.tuesday.short": "D",
   "components.calendar.wednesday.short": "M",
-  "components.forms": "Formulare",
+  "components.formExample.zipCode.error": "Please enter a Number",
   "components.markdown": "### Markdown support\n - build on top of marked\n - server side rendering!!!\n - `github style` markdown",
+  "components.pagination.next": "Next",
+  "components.pagination.previous": "Previous",
   "components.register.cancellationText": "Abbrechen",
   "components.register.consent": "Ja, Sie können mich kontaktieren",
   "components.register.email": "E-mail",
