--- a/i18n/en.json
+++ b/i18n/en.json
@@ -15,8 +15,10 @@
   "components.calendar.thursday.short": "T",
   "components.calendar.tuesday.short": "T",
   "components.calendar.wednesday.short": "W",
-  "components.forms": "Forms",
+  "components.formExample.zipCode.error": "Please enter a Number",
   "components.markdown": "### Markdown support\n - build on top of marked\n - server side rendering!!!\n - `github style` markdown",
+  "components.pagination.next": "Next",
+  "components.pagination.previous": "Previous",
   "components.register.cancellationText": "Cancel",
   "components.register.consent": "I consent to get contacted",
   "components.register.email": "Email",
