--- a/docs/guide/i18n.md
+++ b/docs/guide/i18n.md
@@ -1,25 +1,139 @@
-# I18n
-> For a detailed description read the following [Blogpost](http://blog.devcross.net/2018/02/25/effectively-work-with-i18n-in-vue-js/).
+# Define default locales for your application
 
-The i18n setup is based on [vue-i18n](https://kazupon.github.io/vue-i18n/en/).
+Usually you want to support multiple languages in your project. In order to make it easy,
+the vue-starter has some useful tools to help you managing your translations.
 
-## Important files
+## Default locale and supported locales
 
-- `src/app/shared/plugins/i18n.ts`, i18n set up with asynchronous locale switch
-- `src/server/isomorphic.ts`, set default locale and default messages
-- `src/client/index.ts`, read default messages from store and use it in i18n
-- `package.json`, define supported locales for your application (used by scripts and application)
-- `i18n/*.json`, language files
+To tell your tooling which locale is your default locale (that can be overwritten by
+defining default messages for translation keys) you have to define it in the `./package.json`.
 
-## Extract messages
+You can also add as many other locales as you want to support.
+Your `extract-i18n-messages` script will add these translation files with the default messages defined for the default locale.
 
-To extract all your i18n IDs run `npm run extract-i18n-messages`.
-This will generate the language JSON files in the folder `./i18n`
+e.g.
+```json
+  "config": {
+    "default-locale": "en",
+    "supported-locales": [
+      "en",
+      "de"
+    ]
+  },
+```
 
-To add new language files add a new entry to the `package.json -> config."supported-locales"` attribute.
+## Define and extract default messages
 
-This script also enables you to define default messages with a magic comment:
+Let's see how this whole i18n thing works.
 
-`$t('App.nav.components' /* Components */)`,
-this will add `'Components'` as default value to all `'App.nav.components'` keys,
-but will keep previously modified values.
+You have already defined your default locale and supported locales,
+now you want to add translations to your application.
+
+Open up a file, e.g. `./src/app/home/Home/Home.vue`:
+
+```js
+<template>
+  <div :class="$style.home">
+    <stage />
+    <dev-ex />
+    <enterprise-ready />
+    <user-experience />
+    <quick-start />
+  </div>
+</template>
+```
+
+and add a translation for our default locale:
+
+```js
+<template>
+  <div :class="$style.home">
+    {{ $t('home.test' /* this is a test!!! */) }}
+    <stage />
+    <dev-ex />
+    <enterprise-ready />
+    <user-experience />
+    <quick-start />
+  </div>
+</template>
+```
+
+Now run `npm run extract-i18n-messages` and go to [http://localhost:3000/](http://localhost:3000/).
+
+You should see the message `this is a test!!!` on the upper left corner.
+
+If you open up the file `./i18n/en.json` you should see a new key with the default message as value:
+
+```json
+{
+...
+  "home.test": "this is a test!!!"
+}
+```
+
+You should also see that the file `./i18n/de.json` has the exact same key and value added. 
+
+Let's translate it into german:
+
+```json
+{
+...
+  "home.test": "das ist ein Test!!!"
+}
+```
+
+and run `npm run extract-i18n-messages` again.
+
+### The translated value is not overwritten because it is not the default locale.
+
+If you change the default message in your vue component:
+
+```js
+<template>
+  <div :class="$style.home">
+    {{ $t('home.test' /* this is not a test!!! */) }}
+    <stage />
+    <dev-ex />
+    <enterprise-ready />
+    <user-experience />
+    <quick-start />
+  </div>
+</template>
+```
+
+and run `npm run extract-i18n-messages` again.
+
+You will have a new value in `./i18n/en.json`:
+
+```json
+{
+...
+  "home.test": "this is not a test!!!"
+}
+```
+
+but the value in `./i18n/de.json` will stay the same:
+
+```json
+{
+...
+  "home.test": "das ist ein Test!!!"
+}
+```
+
+## Known limitations
+
+If you want to add HTML to your default messages inside a template, you have to use `[]` instead of `<>` e.g.:
+
+```js
+<template>
+  <div :class="$style.home">
+    <div v-html="$t('home.link' /* [a href='https://example.com' target='_blank']this is a link[/a] */)" />
+    <stage />
+    <dev-ex />
+    <enterprise-ready />
+    <user-experience />
+    <quick-start />
+  </div>
+</template>
+```
