docs: check for typos and update style of writing (#143)

--- a/docs/docs/i18n.md
+++ b/docs/docs/i18n.md
@@ -7,7 +7,7 @@ The i18n setup is based on [vue-i18n](https://kazupon.github.io/vue-i18n/en/).
 
 - `src/app/shared/plugins/i18n.ts`, i18n set up with asynchronous locale switch
 - `src/server/isomorphic.ts`, set default locale and default messages
-- `src/client/index.ts`, read default messages from store and use it in i18n
+- `src/client/index.ts`, read default messages from the store and use it in i18n
 - `package.json`, define supported locales for your application (used by scripts and application)
 - `i18n/*.json`, language files
 
