--- a/docs/guide/i18n.md
+++ b/docs/guide/i18n.md
@@ -1,7 +1,7 @@
 # Define default locales for your application
 
-Usually you want to support multiple languages in your project. In order to make it easy,
-the vue-starter has some useful tools to help you managing your translations.
+Usually, you want to support multiple languages in your project. In order to make it easy,
+the vue-starter has some useful tools to help you manage your translations.
 
 ## Default locale and supported locales
 
@@ -60,7 +60,7 @@ and add a translation for our default locale:
 
 Now run `npm run extract-i18n-messages` and go to [http://localhost:3000/](http://localhost:3000/).
 
-You should see the message `this is a test!!!` on the upper left corner.
+You should see the message `this is a test!!!` in the upper left corner.
 
 If you open up the file `./i18n/en.json` you should see a new key with the default message as value:
 
@@ -73,7 +73,7 @@ If you open up the file `./i18n/en.json` you should see a new key with the defau
 
 You should also see that the file `./i18n/de.json` has the exact same key and value added. 
 
-Let's translate it into german:
+Let's translate it into German:
 
 ```json
 {
