--- a/i18n/en.json
+++ b/i18n/en.json
@@ -32,5 +32,7 @@
   "components.register.submitText": "Submit",
   "components.register.subtitle": "Please fill in all required fields",
   "components.register.terms": "I accept the <a href=\"/\">Terms and Conditions</a>",
-  "components.register.title": "Register"
+  "components.register.title": "Register",
+  "components.truncate.showLess": "Show less",
+  "components.truncate.showMore": "Show more"
 }
