--- a/i18n/en.json
+++ b/i18n/en.json
@@ -15,6 +15,7 @@
   "components.calendar.thursday.short": "T",
   "components.calendar.tuesday.short": "T",
   "components.calendar.wednesday.short": "W",
+  "components.dataTable.noResults": "No results found!",
   "components.formExample.zipCode.error": "Please enter a Number",
   "components.markdown": "### Markdown support\n - build on top of marked\n - server side rendering!!!\n - `github style` markdown",
   "components.pagination.next": "Next",
