docs: localization for zh-cn (#190)
related to #188

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "App.core.description": "A flexible, scalable, opinionated boilerplate for production-ready PWAs with focus on performance, development speed, and best practices",
+  "App.nav.chinese": "Portuguese",
   "App.nav.components": "Components",
   "App.nav.counter": "Counter",
   "App.nav.docs": "Documentation",
