--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,5 +1,6 @@
 {
   "App.core.description": "Ein professionelles Boilerplate für universelle, progressive-web-apps mit Vue.JS",
+  "App.nav.chinese": "中文",
   "App.nav.components": "Komponenten",
   "App.nav.counter": "Zähler",
   "App.nav.docs": "Dokumentation",
