--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,5 +1,6 @@
 {
   "App.core.description": "an enterprise ready boilerplate for isomorphic, progressive web apps with Vue.JS",
+  "App.nav.chinese": "中文",
   "App.nav.components": "Componentes",
   "App.nav.counter": "Contador",
   "App.nav.docs": "Documentation",
