docs: improve localisation quality for zh-cn (#202)

--- a/docs/zh-cn/docs/i18n.md
+++ b/docs/zh-cn/docs/i18n.md
@@ -16,9 +16,9 @@ i18n国际化设置基于 [vue-i18n](https://kazupon.github.io/vue-i18n/en/).
 要提取所有运行的 i18n IDs 运行 `npm run extract-i18n-messages`.
 这将在 `./i18n`文件夹中生成语言JSON文件
 
-要添加新语言文件，请在 `package.json -> config."supported-locales"` 属性中添加新条目。
+要添加新语言文件,请在 `package.json -> config."supported-locales"` 属性中添加新条目.
 
-此脚本还允许您使用magic comment注释定义默认消息：
+此脚本还允许你使用magic comment注释定义默认消息：
 
 `$t('App.nav.components' /* Components */)`,
 这将添加 `'Components'`作为默认值到所有 `'App.nav.components'` keys,
