--- a/docs/zh-cn/guide/i18n.md
+++ b/docs/zh-cn/guide/i18n.md
@@ -1,6 +1,6 @@
 # 定义你应用默认的本地化
 
-通常你想在你的项目里支持多语言. 为了使这更容易, vue-starter有一些有用的工具来帮助你管理你的翻译。
+通常你想在你的项目里支持多语言. 为了使这更容易, vue-starter有一些有用的工具来帮助你管理你的翻译.
 
 ## 默认的地区 & 支持的地区
 
@@ -22,7 +22,7 @@ e.g.
 
 ## 定义和提取默认信息
 
-让我们来看一下整个I18n国际化是怎么运行的。
+让我们来看一下整个I18n国际化是怎么运行的.
 
 你已经定义好了你的默认地区和支持的地区,现在你需要添加翻译到你的应用.
 
@@ -57,7 +57,7 @@ e.g.
 
 现在运行 `npm run extract-i18n-messages` & 打开[http://localhost:3000/](http://localhost:3000/).
 
-你将会在左上角看到 `this is a test!!!` 这条信息。
+你将会在左上角看到 `this is a test!!!` 这条信息.
 
 如果你打开`./i18n/en.json`这个文件你会看到一个新的额关键词和一条默认的如下的值:
 
@@ -120,7 +120,7 @@ e.g.
 
 ## 已知限制
 
-如果你想要添加HTML嵌入到你默认信息里的模板，你需要使用 `[]` 代替 `<>` e.g.:
+如果你想要添加HTML嵌入到你默认信息里的模板,你需要使用 `[]` 代替 `<>` e.g.:
 
 ```js
 <template>
