feat(i18n): update portuguese translations (#253)

--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,36 +1,36 @@
 {
-  "App.core.description": "an enterprise ready boilerplate for isomorphic, progressive web apps with Vue.JS",
+  "App.core.description": "Um boilerplate flexível, com um ponto de vista próprio e pronto para criação de PWAs para produção, com foco em performance, agilidade no desenvolvimento e melhores práticas",
   "App.nav.components": "Componentes",
   "App.nav.counter": "Contador",
-  "App.nav.docs": "Documentation",
+  "App.nav.docs": "Documentação",
   "App.nav.home": "Início",
-  "components.autocomplete.emptyMessage": "No options found for %s",
-  "components.calendar.friday.short": "F",
-  "components.calendar.monday.short": "M",
+  "components.autocomplete.emptyMessage": "Sem resultados para %s",
+  "components.calendar.friday.short": "S",
+  "components.calendar.monday.short": "S",
   "components.calendar.saturday.short": "S",
-  "components.calendar.sunday.short": "S",
-  "components.calendar.thursday.short": "T",
+  "components.calendar.sunday.short": "D",
+  "components.calendar.thursday.short": "Q",
   "components.calendar.tuesday.short": "T",
-  "components.calendar.wednesday.short": "W",
-  "components.dataTable.noResults": "No results found!",
-  "components.formExample.zipCode.error": "Please enter a Number",
-  "components.markdown": "### Markdown support\n - build on top of marked\n - server side rendering!!!\n - `github style` markdown",
-  "components.pagination.next": "Next",
-  "components.pagination.previous": "Previous",
-  "components.register.cancellationText": "Cancel",
-  "components.register.consent": "I consent to get contacted",
+  "components.calendar.wednesday.short": "Q",
+  "components.dataTable.noResults": "Nenhum resultado encontrado!",
+  "components.formExample.zipCode.error": "Por favor digite um CEP",
+  "components.markdown": "### Suporte à Markdown \n - Utilizando Marked (https://github.com/markedjs/marked)\n - Server side rendering!\n - `github style` markdown",
+  "components.pagination.next": "Próximo",
+  "components.pagination.previous": "Anterior",
+  "components.register.cancellationText": "Cancelar",
+  "components.register.consent": "Eu concordo em receber informações",
   "components.register.email": "Email",
-  "components.register.email.invalidText": "This is not a valid email address!",
-  "components.register.name": "Name",
-  "components.register.name.invalidText": "Please provide first and last name",
-  "components.register.phone": "Phone",
-  "components.register.phone.invalidText": "This is not a valid phone number!",
-  "components.register.submit.notification.text": "We've sent an email to: {email}!",
-  "components.register.submit.notification.title": "Hey {name}!",
-  "components.register.submitText": "Submit",
-  "components.register.subtitle": "Please fill in all required fields",
-  "components.register.terms": "I accept the <a href=\"/terms\">Terms and Conditions</a>",
-  "components.register.title": "Register",
-  "components.truncate.showLess": "Show less",
-  "components.truncate.showMore": "Show more"
+  "components.register.email.invalidText": "Não é um endereço de email válido",
+  "components.register.name": "Nome",
+  "components.register.name.invalidText": "Por favor informe nome e sobrenome",
+  "components.register.phone": "Telefone",
+  "components.register.phone.invalidText": "Não é um telefone válido",
+  "components.register.submit.notification.text": "Nós enviamos um e-mail para: {email}!",
+  "components.register.submit.notification.title": "Olá {name}!",
+  "components.register.submitText": "Enviar",
+  "components.register.subtitle": "Por favor preencha todos os campos obrigatórios",
+  "components.register.terms": "Eu aceito os <a href=\"/terms\">Termos e condições</a>",
+  "components.register.title": "Registrar",
+  "components.truncate.showLess": "Mostrar menos",
+  "components.truncate.showMore": "Mostrar mais"
 }
