--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "App.core.description": "A flexible, scalable, opinionated boilerplate for production-ready PWAs with focus on performance, development speed, and best practices",
+  "App.core.description": "The most complete boilerplate for production-ready PWAs. With focus on performance, development speed, and best practices",
   "common.cancel": "Cancel",
   "common.ok": "Ok",
   "components.autocomplete.emptyMessage": "No options found for %s",
