--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,7 +1,15 @@
 {
   "App.core.description": "The most complete boilerplate for production-ready PWAs. With focus on performance, development speed, and best practices",
+  "auth.LoginForm.cta": "Login",
+  "auth.LoginForm.password.error": "The password has to have at least 6 characters",
+  "auth.LoginForm.title": "Login Example",
+  "auth.LoginForm.username.error": "The username can not be empty",
   "common.cancel": "Cancel",
   "common.ok": "Ok",
+  "common.password": "Password",
+  "common.password.placeholder": "Enter any password",
+  "common.username": "Username",
+  "common.username.placeholder": "Enter any username",
   "components.autocomplete.emptyMessage": "No options found for %s",
   "components.calendar.friday.short": "F",
   "components.calendar.monday.short": "M",
