--- a/i18n/pt.json
+++ b/i18n/pt.json
@@ -1,7 +1,15 @@
 {
   "App.core.description": "Um boilerplate flexível, com um ponto de vista próprio e pronto para criação de PWAs para produção, com foco em performance, agilidade no desenvolvimento e melhores práticas",
+  "auth.LoginForm.cta": "Login",
+  "auth.LoginForm.password.error": "The password has to have at least 6 characters",
+  "auth.LoginForm.title": "Login Example",
+  "auth.LoginForm.username.error": "The username can not be empty",
   "common.cancel": "Cancel",
   "common.ok": "Ok",
+  "common.password": "Password",
+  "common.password.placeholder": "Enter any password",
+  "common.username": "Username",
+  "common.username.placeholder": "Enter any username",
   "components.autocomplete.emptyMessage": "Sem resultados para %s",
   "components.calendar.friday.short": "S",
   "components.calendar.monday.short": "S",
