--- a/i18n/zh-cn.json
+++ b/i18n/zh-cn.json
@@ -1,7 +1,15 @@
 {
   "App.core.description": "一个灵活的、可扩展的、自定的，已经准备好用于生产的渐进式网络应用样板，聚焦于性能、开发速度和最佳实践",
+  "auth.LoginForm.cta": "Login",
+  "auth.LoginForm.password.error": "The password has to have at least 6 characters",
+  "auth.LoginForm.title": "Login Example",
+  "auth.LoginForm.username.error": "The username can not be empty",
   "common.cancel": "Cancel",
   "common.ok": "Ok",
+  "common.password": "Password",
+  "common.password.placeholder": "Enter any password",
+  "common.username": "Username",
+  "common.username.placeholder": "Enter any username",
   "components.autocomplete.emptyMessage": "没有选项为 %s 提供",
   "components.calendar.friday.short": "五",
   "components.calendar.monday.short": "一",
