refactor: change name to vuesion (#371)
related to #317

--- a/docs/zh-cn/guide/i18n.md
+++ b/docs/zh-cn/guide/i18n.md
@@ -1,6 +1,6 @@
 # 定义你应用默认的本地化
 
-通常你想在你的项目里支持多语言. 为了使这更容易, vue-starter有一些有用的工具来帮助你管理你的翻译.
+通常你想在你的项目里支持多语言. 为了使这更容易, vuesion 有一些有用的工具来帮助你管理你的翻译.
 
 ## 默认的地区 & 支持的地区
 
@@ -10,6 +10,7 @@
 `extract-i18n-messages` 脚本将会把这些翻译文件和默认信息定义的地区添加到一起.
 
 e.g.
+
 ```json
   "config": {
     "default-locale": "en",
@@ -22,7 +23,7 @@ e.g.
 
 ## 定义和提取默认信息
 
-让我们来看一下整个I18n国际化是怎么运行的.
+让我们来看一下整个 I18n 国际化是怎么运行的.
 
 你已经定义好了你的默认地区和支持的地区,现在你需要添加翻译到你的应用.
 
@@ -68,7 +69,7 @@ e.g.
 }
 ```
 
-你也应该看`./i18n/de.json`这个文件也有一个同样的关键字和值已经被添加. 
+你也应该看`./i18n/de.json`这个文件也有一个同样的关键字和值已经被添加.
 
 让我们把它翻译到德语:
 
@@ -83,7 +84,7 @@ e.g.
 
 ### 翻译的值不会被覆写因为不是默认的地区.
 
-如果你在你的vue组建中改变默认的信息:
+如果你在你的 vue 组建中改变默认的信息:
 
 ```js
 <template>
@@ -120,7 +121,7 @@ e.g.
 
 ## 已知限制
 
-如果你想要添加HTML嵌入到你默认信息里的模板,你需要使用 `[]` 代替 `<>` e.g.:
+如果你想要添加 HTML 嵌入到你默认信息里的模板,你需要使用 `[]` 代替 `<>` e.g.:
 
 ```js
 <template>
