--- a/docs/guide/i18n.md
+++ b/docs/guide/i18n.md
@@ -1,12 +1,12 @@
 # I18n
 
 Usually, you want to support multiple languages in your project. In order to make it easy,
-the vue-starter has some useful tools to help you manage your translations.
+vuesion has some useful tools to help you manage your translations.
 
 ## Default locale and supported locales
 
 To tell your tooling which locale is your default locale (that can be overwritten by
-defining default messages for translation keys) you have to define it in the file: `./vue-starter/config.json`.
+defining default messages for translation keys) you have to define it in the file: `./vuesion/config.json`.
 
 You can also add as many other locales as you want to support.
 The `extract-i18n-messages` script will add these translation files with the default messages defined for the default locale.
