--- a/i18n/en.json
+++ b/i18n/en.json
@@ -12,7 +12,7 @@
   "common.password.placeholder": "Enter any password",
   "common.username": "Username",
   "common.username.placeholder": "Enter any username",
-  "components.autocomplete.emptyMessage": "No options found for %s",
+  "components.autocomplete.emptyMessage": "No items found for %s",
   "components.calendar.friday.short": "F",
   "components.calendar.monday.short": "M",
   "components.calendar.nextMonth": "next month",
