refactor(design-system): update color-tokens and text-styles (#543)
closes #513

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,30 +1,29 @@
 {
-  "App.core.description": "Ein professionelles Boilerplate für universelle, progressive-web-apps mit Vue.JS",
+  "App.core.description": "The most complete boilerplate for production-ready PWAs. With focus on performance, development speed, and best practices",
   "auth.LoginForm.cta": "Login",
-  "auth.LoginForm.password.error": "Das Passwort muss mindestens 6 Zeichen lang sein.",
-  "auth.LoginForm.title": "Login-Beispiel",
-  "auth.LoginForm.username.error": "Der Benutzername darf nicht leer sein",
-  "common.cancel": "Abbrechen",
+  "auth.LoginForm.password.error": "The password has to have at least 6 characters",
+  "auth.LoginForm.title": "Login Example",
+  "auth.LoginForm.username.error": "The username can not be empty",
+  "common.cancel": "Cancel",
   "common.ok": "Ok",
-  "common.password": "Passwort",
-  "common.password.placeholder": "Beliebiges Passwort eingeben",
-  "common.username": "Benutzername",
-  "common.username.placeholder": "Beliebigen Benutzernamen eingeben",
-  "components.autocomplete.emptyMessage": "Keine Einträge für %s gefunden.",
+  "common.password": "Password",
+  "common.password.placeholder": "Enter any password",
+  "common.username": "Username",
+  "common.username.placeholder": "Enter any username",
+  "components.autocomplete.emptyMessage": "No items found for %s",
   "components.calendar.friday.short": "F",
   "components.calendar.monday.short": "M",
-  "components.calendar.nextMonth": "nächster Monat",
-  "components.calendar.previousMonth": "vorheriger Monat",
+  "components.calendar.nextMonth": "next month",
+  "components.calendar.previousMonth": "previous month",
   "components.calendar.saturday.short": "S",
   "components.calendar.sunday.short": "S",
-  "components.calendar.thursday.short": "D",
-  "components.calendar.tuesday.short": "D",
-  "components.calendar.wednesday.short": "M",
-  "components.cookieConsent.accept": "Akzeptieren",
-  "components.dataTable.noResults": "Keine Ergebnisse gefunden!",
-  "components.formExample.zipCode.error": "Bitte geben Sie eine Zahl ein!",
-  "components.pagination.next": "Nächste",
-  "components.pagination.previous": "Vorherige",
-  "components.truncate.showLess": "Weniger anzeigen",
-  "components.truncate.showMore": "Mehr anzeigen"
+  "components.calendar.thursday.short": "T",
+  "components.calendar.tuesday.short": "T",
+  "components.calendar.wednesday.short": "W",
+  "components.dataTable.noResults": "No results found!",
+  "components.formExample.zipCode.error": "Please enter a Number",
+  "components.pagination.next": "Next",
+  "components.pagination.previous": "Previous",
+  "components.truncate.showLess": "Show less",
+  "components.truncate.showMore": "Show more"
 }
