--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,6 +1,6 @@
 {
-  "App.core.description": "The most complete boilerplate for production-ready PWAs. With focus on performance, development speed, and best practices",
-  "auth.LoginForm.cta": "Login",
+  "App.core.description": "Ein professionelles Boilerplate für universelle, progressive-web-apps mit Vue.JS",
+  "auth.LoginForm.cta": "Anmelden",
   "auth.LoginForm.password.error": "The password has to have at least 6 characters",
   "auth.LoginForm.title": "Login Example",
   "auth.LoginForm.username.error": "The username can not be empty",
