refactor(components): move premium components to separate folder

--- a/i18n/de.json
+++ b/i18n/de.json
@@ -5,6 +5,7 @@
   "auth.LoginForm.title": "Login Example",
   "auth.LoginForm.username.error": "The username can not be empty",
   "common.Apollo": "Apollo Example",
+  "common.Back-to-top": "Back to top",
   "common.cancel": "Cancel",
   "common.home": "Home",
   "common.ok": "Ok",
