--- a/i18n/de.json
+++ b/i18n/de.json
@@ -1,6 +1,5 @@
 {
-  "App.core.description": "Ein professionelles Boilerplate für universelle, progressive-web-apps mit Vue.JS",
-  "auth.LoginForm.cta": "Anmelden",
+  "auth.LoginForm.cta": "Login",
   "auth.LoginForm.password.error": "The password has to have at least 6 characters",
   "auth.LoginForm.title": "Login Example",
   "auth.LoginForm.username.error": "The username can not be empty",
@@ -8,28 +7,12 @@
   "common.Back-to-top": "Back to top",
   "common.Downloads": "Downloads",
   "common.Form-example": "Form example",
-  "common.cancel": "Cancel",
-  "common.home": "Home",
-  "common.ok": "Ok",
   "common.password": "Password",
   "common.password.placeholder": "Enter any password",
   "common.username": "Username",
   "common.username.placeholder": "Enter any username",
-  "components.autocomplete.emptyMessage": "No items found for %s",
-  "components.calendar.friday.short": "F",
-  "components.calendar.monday.short": "M",
-  "components.calendar.nextMonth": "next month",
-  "components.calendar.previousMonth": "previous month",
-  "components.calendar.saturday.short": "S",
-  "components.calendar.sunday.short": "S",
-  "components.calendar.thursday.short": "T",
-  "components.calendar.tuesday.short": "T",
-  "components.calendar.wednesday.short": "W",
-  "components.dataTable.noResults": "No results found!",
   "components.formExample.zipCode.error": "Please enter a Number",
   "components.pagination.a11y": "You're on page",
   "components.pagination.next": "Next",
-  "components.pagination.previous": "Previous",
-  "components.truncate.showLess": "Show less",
-  "components.truncate.showMore": "Show more"
+  "components.pagination.previous": "Previous"
 }
